--- a/data/requirements.txt
+++ b/data/requirements.txt
@@ -1,2 +1,10 @@
-lxml~=4.6.2
-aiohttp~=3.7.3
+aiohttp==3.7.3
+async-timeout==3.0.1
+attrs==20.3.0
+chardet==3.0.4
+idna==2.10
+lxml==4.6.2
+more-itertools==8.6.0
+multidict==5.1.0
+typing-extensions==3.7.4.3
+yarl==1.6.3
